--- a/TP1/.recommenders/caches/identified-project-coordinates.json
+++ b/TP1/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_31.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"]]
+[[{"location":"/usr/lib/jvm/java-8-oracle","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"],[{"location":"/home/m1/jones/Bureau/M1S1/ACT/TPS/TP1/act_tp1","type":"PROJECT","hints":{"PROJECT_NAME":"act_tp1"}},"ABSENT"]]
